// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jukebox handles a CONNECTED 1`] = `
{
  "mopidyOnline": false,
  "online": true,
  "playbackState": "stopped",
  "volume": 0,
}
`;

exports[`jukebox handles a DISCONNECTED 1`] = `
{
  "online": false,
}
`;

exports[`jukebox handles a MOPIDY_CONNECTED 1`] = `
{
  "mopidyOnline": true,
  "online": false,
  "playbackState": "stopped",
  "volume": 0,
}
`;

exports[`jukebox handles a MOPIDY_DISCONNECTED 1`] = `
{
  "mopidyOnline": false,
}
`;

exports[`jukebox handles a UPDATE_PLAYBACK_STATE playing 1`] = `
{
  "mopidyOnline": false,
  "online": false,
  "playbackState": "playing",
  "volume": 0,
}
`;

exports[`jukebox handles a UPDATE_PLAYBACK_STATE playing when already playing 1`] = `
{
  "online": false,
  "playbackState": "playing",
  "volume": 0,
}
`;

exports[`jukebox handles a UPDATE_VOLUME 1`] = `
{
  "mopidyOnline": false,
  "online": false,
  "playbackState": "stopped",
  "volume": 32,
}
`;

exports[`jukebox handles a UPDATE_VOLUME decreased 1`] = `
{
  "online": false,
  "volume": 5,
}
`;

exports[`jukebox handles a UPDATE_VOLUME increased 1`] = `
{
  "online": false,
  "volume": 32,
}
`;

exports[`jukebox handles default state 1`] = `
{
  "mopidyOnline": false,
  "online": false,
  "playbackState": "stopped",
  "volume": 0,
}
`;
